# Aether-Project

./: .gitignore
Patient Twin AI/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  conftest.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements-papagei.txt  requirements-train.txt
Patient Twin AI/ai/: __init__.py  eval_report.py  grounding.py
Patient Twin AI/ai/baseline/: __init__.py  config.py  eval.py  foundation_encoder.py  population.py  statistical.py
Patient Twin AI/ai/eval_datasets/: __init__.py  _resample.py  nfcorpus.py  ppg_dalia.py  wesad.py
Patient Twin AI/ai/features/: __init__.py  classical.py  config.py  foundation_encoder.py  papagei_extractor.py  sqi.py  waveform.py  waveform_extractor.py
Patient Twin AI/ai/forecasting/: __init__.py  backtest.py  holt.py
Patient Twin AI/ai/interfaces/: __init__.py  baseline_engine.py  feature_extractor.py  forecaster.py  llm_gateway.py  retriever.py
Patient Twin AI/ai/llm/: __init__.py  client.py  config.py  deid.py  gateway.py  prompt.py  readiness.py
Patient Twin AI/ai/retrieval/: __init__.py  bm25.py  embedder.py  eval.py  hybrid.py  ports.py  reranker.py  vector_store.py
Patient Twin AI/ai/tests/: test_eval_report.py  test_loadtest.py
Patient Twin AI/core/: README.md  __init__.py  observability.py
Patient Twin AI/deploy/: Dockerfile  requirements.txt
Patient Twin AI/docs/: 00_README.md  01_PRD.md  02_Architecture_Specification.md  03_Tech_Stack_and_Model_Registry.md  04_Data_Contracts_and_Schemas.md  05_Baseline_and_Deviation_Engine.md  06_Guardrails_Safety_Policy.md  07_API_Specification.md  08_Docker_Stack.md  09_Repository_Blueprint.md  10_Build_Backlog.md  11_Evaluation_Plan.md  12_Model_RAM_and_GPU_Sizing.md  13_Datasets.md  14_Hardening_Runbook.md  15_Post_v1_Backlog.md  16_Training_Roadmap.md  17_Training_Log.md
Patient Twin AI/schemas/: __init__.py  audit.py  baseline.py  consent.py  document.py  event.py  features.py  forecast.py  outcome.py  output_contract.py  patient.py  psg.py  reading.py  retrieval.py  vector.py
Patient Twin AI/scripts/: fetch_datasets.py  fetch_sleep_edf.py  loadtest.py  run_eval.py  validate_clinical_config.py
Patient Twin AI/services/: __init__.py
(+243 files in other folders)
