[project]
name = "patient-copilot"
version = "0.0.1"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
# Alembic migrations are generated artifacts (not hand-authored) — skip type checks.
exclude = ["^core/db/migrations/"]

# The strict gate is `mypy schemas core services` — `ai/` (MLX/NumPy training code) is
# intentionally OUT of it (CLAUDE.md). When a gate target imports `ai.*` (e.g. the
# learned BaselineEngine/FeatureExtractor behind the stable interfaces), follow it
# silently so `ai/`'s loose numeric typing never turns the gate red. Run mypy on `ai/`
# directly if you want to check it.
[[tool.mypy.overrides]]
module = ["ai.*"]
follow_imports = "silent"

# Tests aren't held to strict def/generic annotation rules (fixtures, helpers).
[[tool.mypy.overrides]]
module = ["core.*.tests.*", "schemas.tests.*", "services.*.tests.*", "ai.*.tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_any_generics = false

[tool.pytest.ini_options]
testpaths = ["schemas", "core", "services", "ai"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
